--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -34,29 +34,29 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        node: ['18', '20', '22']
-    name: integration-tests (Node.js ${{ matrix.node }})
+        node-version: ['18', '20', '22']
+    name: integration-tests (Node.js ${{ matrix.node-version }})
     steps:
       - uses: actions/checkout@v4
       - name: Setup node
         uses: actions/setup-node@v4
         with:
-          node-version: ${{ matrix.node }}
-          cache: 'yarn'
+          node-version: ${{ matrix.node-version }}
+          cache: 'pnpm'
       - name: Install dependencies
-        run: yarn --dev
+        run: pnpm install
       - name: Run tests
-        run: yarn test
+        run: pnpm test
       - name: Build project
-        run: yarn build
+        run: pnpm build
       - name: Run ESM env
-        run: yarn test:env:esm
+        run: pnpm test:env:esm
       - name: Run Node.js env
-        run: yarn test:env:nodejs
+        run: pnpm test:env:nodejs
       - name: Run node typescript env
-        run: yarn test:env:node-ts
+        run: pnpm test:env:node-ts
       - name: Run Browser env
-        run: yarn test:env:browser
+        run: pnpm test:env:browser
       - name: Upload coverage reports to Codecov
         uses: codecov/codecov-action@v5
         env:
@@ -70,11 +70,11 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: 22
-          cache: 'yarn'
+          cache: 'pnpm'
       - name: Install dependencies
-        run: yarn --dev
+        run: pnpm install
       - name: Run code style check
-        run: yarn style
+        run: pnpm style
       - name: Run yaml style check
         uses: ibiqlik/action-yamllint@v3
         with:
@@ -88,10 +88,10 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: 22
-          cache: 'yarn'
+          cache: 'pnpm'
       - name: Install dependencies
-        run: yarn --dev
+        run: pnpm install
       - name: Build project
-        run: yarn build
+        run: pnpm build
       - name: Run types check
-        run: yarn types
+        run: pnpm types
