--- a/.github/workflows/meilisearch-prototype-tests.yml
+++ b/.github/workflows/meilisearch-prototype-tests.yml
@@ -42,26 +42,35 @@ jobs:
           - '7700:7700'
     strategy:
       matrix:
-        node: ['18', '20', '22']
-    name: integration-tests (Node.js ${{ matrix.node }})
+        node-version: ['18', '20', '22']
+    name: integration-tests (Node.js ${{ matrix.node-version }})
+    #TODO: https://docs.github.com/en/actions/sharing-automations/avoiding-duplication 
+    #      https://docs.github.com/en/actions/sharing-automations/reusing-workflows
+    #      https://docs.github.com/en/actions/sharing-automations/creating-actions/creating-a-composite-action
     steps:
-      - uses: actions/checkout@v4
-      - name: Setup node
+      - name: Checkout code
+        uses: actions/checkout@v4
+      - name: Install pnpm
+        uses: pnpm/action-setup@v4
+        with:
+          version: 9
+      - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v4
         with:
-          node-version: ${{ matrix.node }}
-          cache: yarn
+          node-version: ${{ matrix.node-version }}
+          cache: 'pnpm'
       - name: Install dependencies
-        run: yarn --dev
+        run: pnpm install
+
       - name: Run tests
-        run: yarn test
+        run: pnpm test
       - name: Build project
-        run: yarn build
+        run: pnpm build
       - name: Run ESM env
-        run: yarn test:env:esm
+        run: pnpm test:env:esm
       - name: Run Node.js env
-        run: yarn test:env:nodejs
+        run: pnpm test:env:nodejs
       - name: Run node typescript env
-        run: yarn test:env:node-ts
+        run: pnpm test:env:node-ts
       - name: Run Browser env
-        run: yarn test:env:browser
+        run: pnpm test:env:browser
