--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -12,22 +12,22 @@ jobs:
         with:
           node-version: 22
           registry-url: https://registry.npmjs.org/
-          cache: 'yarn'
+          cache: 'pnpm'
       - name: Check release validity
         run: sh .github/scripts/check-release.sh
       - name: Check tag format
         run: sh .github/scripts/check-tag-format.sh "${{ github.event.release.prerelease }}"
       - name: Install dependencies
-        run: yarn install
+        run: pnpm install
       - name: Build meilisearch-js
-        run: yarn build
+        run: pnpm build
       - name: Publish with latest tag
         if: '!github.event.release.prerelease'
         run: npm publish .
         env:
-          NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
       - name: Publish with beta tag
         if: 'github.event.release.prerelease'
         run: npm publish . --tag beta
         env:
-          NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
