--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -6,28 +6,30 @@ on:
 jobs:
   publish-npm:
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      id-token: write
     steps:
       - uses: actions/checkout@v4
-      - uses: actions/setup-node@v4
-        with:
-          node-version: 22
-          registry-url: https://registry.npmjs.org/
-          cache: 'pnpm'
       - name: Check release validity
         run: sh .github/scripts/check-release.sh
       - name: Check tag format
         run: sh .github/scripts/check-tag-format.sh "${{ github.event.release.prerelease }}"
-      - name: Install dependencies
-        run: pnpm install
+
+      - uses: ./.github/actions/set-up-node
+        with:
+          node-version: 22
+          registry-url: https://registry.npmjs.org/
+
       - name: Build meilisearch-js
         run: pnpm build
       - name: Publish with latest tag
-        if: '!github.event.release.prerelease'
-        run: npm publish .
+        if: !github.event.release.prerelease
+        run: pnpm publish --provenance --access public
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
       - name: Publish with beta tag
-        if: 'github.event.release.prerelease'
-        run: npm publish . --tag beta
+        if: github.event.release.prerelease
+        run: pnpm publish --provenance --access public --tag beta
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
