--- a/package.json
+++ b/package.json
@@ -46,15 +46,15 @@
     "test": "vitest run --coverage",
     "types": "tsc -p tsconfig.json --noEmit",
     "types:watch": "pnpm types --watch",
-    "test:env:browser": "pnpm build && node scripts/copy-umd-file.js --to ./tests/env/express/public && pnpm --cwd tests/env/express && pnpm --cwd tests/env/express test",
+    "test:env:browser": "pnpm build && node scripts/copy-umd-file.js --to ./tests/env/express/public && pnpm -C tests/env/express install && pnpm -C tests/env/express test",
     "test:watch": "vitest watch",
     "test:coverage": "pnpm test",
     "test:ci": "pnpm test",
     "test:env": "pnpm build && pnpm test:env:nodejs && pnpm test:env:esm && pnpm test:env:node-ts",
-    "test:env:node-ts": "pnpm --cwd tests/env/typescript-node start",
+    "test:env:node-ts": "pnpm -C tests/env/typescript-node start",
     "test:env:nodejs": "pnpm build && node tests/env/node/index.cjs && node tests/env/node/getting_started.cjs",
-    "test:env:esm": "pnpm --cwd tests/env/esm && pnpm --cwd tests/env/esm start",
-    "test:env:nitro-app": "pnpm build && pnpm --cwd tests/env/nitro-app test",
+    "test:env:esm": "pnpm -C tests/env/esm install && pnpm -C tests/env/esm start",
+    "test:env:nitro-app": "pnpm build && pnpm -C tests/env/nitro-app test",
     "fmt": "prettier -c ./**/*.{js,ts}",
     "fmt:fix": "prettier -w ./**/*.{js,ts}",
     "lint": "eslint",
