Fix composite action

--- a/.github/actions/set-up-node/action.yml
+++ b/.github/actions/set-up-node/action.yml
@@ -18,4 +18,5 @@ runs:
         registry-url: ${{ inputs.registry-url }}
         cache: "pnpm"
     - name: Install dependencies
+      shell: bash
       run: pnpm install
