--- a/.github/release-draft-template.yml
+++ b/.github/release-draft-template.yml
@@ -1,37 +1,37 @@
-name-template: 'v$RESOLVED_VERSION 🌻'
-tag-template: 'v$RESOLVED_VERSION'
+name-template: "v$RESOLVED_VERSION 🌻"
+tag-template: "v$RESOLVED_VERSION"
 exclude-labels:
-  - 'skip-changelog'
+  - "skip-changelog"
 version-resolver:
   minor:
     labels:
-      - 'breaking-change'
+      - "breaking-change"
   default: patch
 categories:
-  - title: '⚠️ Breaking changes'
-    label: 'breaking-change'
-  - title: '🚀 Enhancements'
-    label: 'enhancement'
-  - title: '🐛 Bug Fixes'
-    label: 'bug'
-  - title: '🔒 Security'
-    label: 'security'
-  - title: '⚙️ Maintenance/misc'
+  - title: "⚠️ Breaking changes"
+    label: "breaking-change"
+  - title: "🚀 Enhancements"
+    label: "enhancement"
+  - title: "🐛 Bug Fixes"
+    label: "bug"
+  - title: "🔒 Security"
+    label: "security"
+  - title: "⚙️ Maintenance/misc"
     label:
-      - 'maintenance'
-      - 'documentation'
+      - "maintenance"
+      - "documentation"
 template: |
   $CHANGES
 
   Thanks again to $CONTRIBUTORS! 🎉
-no-changes-template: 'Changes are coming soon 😎'
-sort-direction: 'ascending'
+no-changes-template: "Changes are coming soon 😎"
+sort-direction: "ascending"
 replacers:
   - search: '/(?:and )?@dependabot-preview(?:\[bot\])?,?/g'
-    replace: ''
+    replace: ""
   - search: '/(?:and )?@dependabot(?:\[bot\])?,?/g'
-    replace: ''
+    replace: ""
   - search: '/(?:and )?@bors(?:\[bot\])?,?/g'
-    replace: ''
-  - search: '/(?:and )?@meili-bot,?/g'
-    replace: ''
+    replace: ""
+  - search: "/(?:and )?@meili-bot,?/g"
+    replace: ""
